<resources>
    <string name="app_name">StuffTracker</string>
    <string name="device_doesnt_support_nfc">Cet appareil ne semble pas supporter la technologie NFC.</string>
    <string name="please_enable_nfc">Veuillez activer NFC dans les paramètres. (pressez Retour pour revenir à l\'application)</string>
    <string name="action_refresh">Refresh items from database</string>
    <string name="action_filter">Filter items on the list</string>
    <string name="action_filter_validate">Validate filter options</string>
    <string name="action_validate_edit">Validate editoptions</string>
    <string name="id">ID :</string>
    <string name="filter_fragment_brand">Brand :</string>
    <string name="filter_fragment_model">Model :</string>
    <string name="filter_fragment_nfc_id">NFC ID :</string>
    <string name="filter_fragment_categories">Categories</string>
    <string name="filter_fragment_name">Name :</string>
    <string name="add_picture_from">Add picture from :</string>
    <string name="validate_item_insertion">Validate item insertion</string>
    <string name="edit_current_item">Edit current item</string>
    <string name="unknown_info">unknown</string>
    <string name="delete_item_from_database">Delete item from database</string>
    <string name="delete_item_from_database_title">Delete item from database</string>
    <string name="delete_item_from_database_msg">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_missing_item_id">An item id is required !</string>
    <string name="error_missing_item_name">An item name is required !</string>
    <string name="error_missing_item_category">An item category is required !</string>
    <string name="error_missing_item_borrower">A borrower name is required !</string>
    <string name="item_updated_toast">Item updated !</string>
    <string name="item_added_toast">Item added !</string>
    <string name="tv_txt_dateend">Until :</string>
    <string name="tv_txt_start">From :</string>
    <string name="tv_txt_borrower_name">By :</string>
    <string name="tv_txt_loan_activation">Loan active</string>
    <string name="btn_txt_select_categories">Select categories</string>
    <string name="tv_txt_categories">Categories :</string>
    <string name="tv_txt_note">Note :</string>
    <string name="tv_txt_model">Model :</string>
    <string name="tv_txt_brand">Brand :</string>
    <string name="tv_txt_name">Name :</string>
    <string name="picture_of_the_item">Picture of the item.</string>
    <string name="contains">Contains :</string>
    <string name="select_categories_dialog">Select categories</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>


    <string-array name="categories_names">
        <item>Computer</item>
        <item>Phone</item>
        <item>Tablet</item>
        <item>VR</item>
        <item>Adaptor</item>
        <item>Display</item>
        <item>Book</item>
        <item>Development kit</item>
        <item>Cable</item>
        <item>Drone</item>
        <item>Keyboard</item>
        <item>Mouse</item>
        <item>PC peripherals</item>
        <item>Rocket</item>
        <item>Other</item>
    </string-array>

    <string-array name="loan_status">
        <item>All</item>
        <item>Available</item>
        <item>Loaned</item>
    </string-array>
</resources>
